syntax = "proto3";

option go_package = "INServer/src/proto/data";

import "math.proto";

enum ComponentType {
    Invalid = 0;
    Transofrm = 1;
    Physics = 2;
    Attribute = 3;
    Move = 4;
    Controller = 5;
    Reborn = 6;
}

enum ControllerType {
    PlayerController = 0;
    AIController = 1;
}

enum RebornType {
    None = 0;
    Auto = 1;
    Manual = 2;
}

message TransformComponent {
    Vector3 Position = 1;
    Quaternion rotation = 2;
}

message PhysicsComponent {
    double Mass = 1;
    Vector3 RawSpeed = 2; // 玩家操作的移动速度
    Vector3 PassiveSpeed = 3; // 其他外力影响的速度
}

message AttributeComponent {
    float Speed = 1;
    float HP = 2;
    float MaxHP = 3;
}

message MoveComponent {
    Vector3 Destination = 1;
}

message ControllerComponent {
    ControllerType ControllerType = 1;
}

message RebornComponent {
    int64 RebornTime = 1;
    RebornType RebornType = 2;
    Vector3 Position = 3;
}

message Component {
    ComponentType Type = 1;
    TransformComponent Transform = 2;
    PhysicsComponent Physics = 3;
    AttributeComponent Attribute = 4;
    MoveComponent Move = 5;
    ControllerComponent Controller = 6;
    RebornComponent Reborn = 7;
}